# comptime_enum

./: .gitignore  CMakeLists.txt  compile_commands.json  license
examples/: example.cpp
include/: comptime.common.h  comptime.enum.h  comptime.hpp  comptime.struct.h  comptime_enum.h
