cmake_minimum_required(VERSION 3.22.2)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(examples)
add_library(comptime_enum INTERFACE)
target_include_directories(comptime_enum INTERFACE ${CMAKE_SOURCE_DIR}/include)
file(GLOB SOURCE_FILES ${CMAKE_SOURCE_DIR}/examples/*.cpp)
add_executable(examples ${SOURCE_FILES})
target_link_libraries(examples PUBLIC comptime_enum)
